--- a/html/Homeworks/lesson 2/the dream.html
+++ b/html/Homeworks/lesson 2/the dream.html
@@ -7,12 +7,18 @@
     <title>Своя мебель</title>
 </head>
 <body>
-    <img src="meb.jpg" alt="logo">
+
     <h1>
         <p align="center">
-            Почему не нужно покупать готовую мебель
+            <b>СДЕЛАЙ САМ!</b>
         </p>
     </h1>
-
+    <img align="right" alt="logo" src="meb.jpg">
+    <p>
+            Еще несколько десятилетий назад не стоило даже думать о том, чтобы создать  
+        <strong>у себя дома оригинальный интерьер</strong> 
+         , непохожий на другие. Сегодня, в противоположность однотипной мебели появилось широкое разнообразие красивых, эксклюзивных, стильных моделей. Выбрать есть среди чего – это касается как корпусной, так и мягкой мебели. Нам доступна продукция не только отечественных производителей, но и зарубежных фабрик, правда, несколько дороже по цене. 
+    </p>
+   
 </body>
 </html>
